--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 .container {
+  display: block;
   margin-top: 20px;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   width: 100%;
