--- a/index.css
+++ b/index.css
@@ -26,6 +26,10 @@ h3 {
   border-top-right-radius: 10px;
 }
 
+input[type=number]::-webkit-inner-spin-button {
+  opacity: 1;
+}
+
 #number-el {
   width: 40%;
   text-align: center;
